# backend/src/Routes/post.routes.ts
@@ -16,7 +16,7 @@ export class PostRouter extends BaseRouter<PostController, PostMiddleware> {
           this.middleware.createPostValidator(req, res, next)
         },
         (req, res) => {
-          this.controller.createPost(req, res)
+          this.controller.create(req, res)
         }
       )
       .get(
@@ -24,14 +24,14 @@ export class PostRouter extends BaseRouter<PostController, PostMiddleware> {
           this.middleware.getPostsValidator(req, res, next)
         },
         (req, res) => {
-          this.controller.getPosts(req, res)
+          this.controller.findAll(req, res)
         }
       )
 
     this.router
       .route('/post/:id')
       .get((req, res) => {
-        this.controller.getPost(req, res)
+        this.controller.findWithComments(req, res)
       })
       .put(
         this.middleware.passAuth('jwt', { session: false }),
@@ -40,15 +40,22 @@ export class PostRouter extends BaseRouter<PostController, PostMiddleware> {
           this.middleware.updatePostValidator(req, res, next)
         },
         (req, res) => {
-          this.controller.updatePost(req, res)
+          this.controller.update(req, res)
         }
       )
       .delete(
         this.middleware.passAuth('jwt', { session: false }),
         (req, res, next) => this.middleware.checkUserIsPostOwner(req, res, next),
         (req, res) => {
-          this.controller.removePost(req, res)
+          this.controller.create(req, res)
         }
       )
+
+    this.router.post(
+      '/post/:id/like',
+      this.middleware.passAuth('jwt', { session: false }),
+      (req, res, next) => this.middleware.getAccessToken(req, res, next),
+      (req, res) => this.controller.like(req, res)
+    )
   }
 }
